--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,15 @@ body {
 	margin: 0;
 	height: 100%;
 }
+.wrapper {
+min-height: 100%;
+height: auto !important;
+height: 100%;
+margin: 0 auto -5em;
+}
 
 header {
-	height: 6%;
+	height: 5%;
 	width: 100%;
 	padding: 2%;
 	background-color: black;
@@ -51,7 +57,7 @@ header h2 {
 footer {
 	height: 5%;
 	width: 100%;
-	padding: 2%;
+	padding: 1%;
 	background-color: black;
 	color: linen;
 	margin-bottom: 0px;
