--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,10 @@ body {
 }
 .wrapper {
 min-height: 100%;
+min-width: 100%;
 height: auto !important;
 height: 100%;
-margin: 0 auto -5em;
+margin: 0 auto -3.7em;
 }
 
 header {
@@ -29,7 +30,7 @@ header h2 {
 	margin-bottom: 0;
 	font-size: 45px;
 	line-height: 30px;
-	font-family: 'Arial Black', 'helvetica';
+	font-family: 'helvetica','Arial Black';
 	font-family: 'Vast Shadow' !important;
 	font-style: normal;
 	font-weight: 400;
@@ -43,6 +44,7 @@ header h2 {
 	padding: 2%;
 	border-radius: 4px;
 	width: 80%;
+	vertical-align: middle;
 }
 
 #details {
@@ -55,9 +57,9 @@ header h2 {
 }
 
 footer {
-	height: 5%;
+	height: 3%;
 	width: 100%;
-	padding: 1%;
+	padding: 2%;
 	background-color: black;
 	color: linen;
 	margin-bottom: 0px;
@@ -68,7 +70,19 @@ footer h5 {
 	font-family: 'Arial Black';
 	margin-top: 0px;
 	margin-bottom: 0px;
+	vertical-align: middle;
+	width: 100%;
 }
 
-footer.a {
-	color: rgb(75 22 137);
+a {
+	color: linen;
+	font-family: 'helvetica';
+}
+
+a:link {
+	text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
