When entry titles are clicked the description of the entry appears. Hiding the description is not working yet.

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,10 @@ header h2 {
 }
 
 .details {
+	display: none;
+}
+
+.details-show {
 	background-color: linen;
 	margin: 3% auto;
 	color: #4C4C5A;
