arrow to redirect to ted.com is styled, but needs repositioning.

--- a/css/style.css
+++ b/css/style.css
@@ -108,3 +108,9 @@ a:link {
 a:hover {
     text-decoration: underline;
 }
+.show .openInTed {
+	color: white;
+	background-color: black;
+	border-radius: 25px;
+	padding: 1% 2%;
+}
