--- a/css/style.css
+++ b/css/style.css
@@ -48,32 +48,58 @@ header h2 {
 	width: 80%;
 	vertical-align: middle;
 }
-
 .entry {
 border-radius: 4px;
 box-shadow: 3px 3px 3px #888888;
 border: black solid 2px;
 background: #fbfaf9;
-padding: 2%;
+padding: 1%;
 width: 96%;
+}
+
+ul
+{
+    list-style-type: none;
+    inline: block;
+}
+
+.title {
+	padding-bottom: 2%;
+}
+
+li .arrow {min-width: 100%;
+	height: 20%;
+	padding: 20%;
+	margin-right: 5%;
 }
 
 .hide {
 	display: none;
 }
 
-.show .openInTed {
-	background-color: black;
-}
-
 .show {
 	background-color: linen;
-	margin: 3% auto;
+	margin: 2% auto;
 	color: #4C4C5A;
 	padding: 2%;
 	border-radius: 4px;
 	width: 80%;
 }
+
+.show .openInTed {
+	background-color: black;
+	clear: both;
+	margin: 0 auto;
+}
+
+/*.clearfix:after {
+     visibility: hidden;
+     display: block;
+     font-size: 0;
+     content: " ";
+     clear: both;
+     height: 0;
+     }*/
 
 footer {
 	height: 3%;
@@ -108,9 +134,19 @@ a:link {
 a:hover {
     text-decoration: underline;
 }
-.show .openInTed {
-	color: white;
+
+.arrow .openInTed {
+	text-decoration: none;
+	color: orange;
 	background-color: black;
 	border-radius: 25px;
+	margin: 0 auto;
 	padding: 1% 2%;
 }
+
+ul .arrow {
+	background-color: #fbfaf9;
+	height: 7%;
+	margin-left: -1%;
+}
+
