--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ ul
 }
 
 .title {
-	padding-bottom: 2%;
+	padding-bottom: 3%;
 }
 
 li .arrow {min-width: 100%;
@@ -140,6 +140,7 @@ a:hover {
 	color: orange;
 	background-color: black;
 	border-radius: 25px;
+	box-shadow: 2px 2px 2px #888888; 
 	margin: 0 auto;
 	padding: 1% 2%;
 }
